[package]
name = "learnrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sample1"

[[bin]]
name = "print"

[[bin]]
name = "variables"

[[bin]]
name = "turtle_vars"

[[bin]]
name = "turtle_loops"

[[bin]]
name = "structs"

[[bin]]
name = "enums"

[dependencies]
turtle = { git = "https://github.com/sunjay/turtle.git", tag = "v1.0.0-rc.2" }
chrono = "0.4"